--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -59,6 +59,7 @@
                             <th>Solicitante</th>
                             <th>Cantidad Solicitada</th>
                             <th>Cantidad Comprobada</th>
+                            <th>Excedente / Faltante</th>
                             <th>Estatus</th>
                             <th>Editar</th>
                             <th>Eliminar</th>
@@ -75,6 +76,7 @@
                             <td>@string.Format("{0:C}", @item.ImporteSolicitado)    </td>
                             <td>@string.Format("{0:C}", @item.ImporteComprobado)</td>
 
+                            <td>@item.ImporteExcedenteC</td>
                             <td>@item.Estatus</td>
 
                             <td>
@@ -146,12 +148,12 @@
                 
                 var row = "";
                 if (data.length == 0) {
-                    row += "<tr><td colspan='9'>" +"-- No existen registros --"+ "</td></tr>";
+                    row += "<tr><td colspan='10'>" +"-- No existen registros --"+ "</td></tr>";
                 }
                 else {
                     $.each(response, function (index, item) {
                         if (item.estatus == "Incompleta" ) {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" +item.importeSolicitadoC + "</td><td>" + item.importeComprobadoC + "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitadoC + "</td><td>" + item.importeComprobadoC + "</td><td>" + item.importeExcedenteC+ "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" +
                                 "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
@@ -159,13 +161,13 @@
                         else if (item.estatus == "PorAutorizar" || item.estatus == "PorComprobar" ||
                             item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada" || item.estatus =="Revisada" || item.estatus == "Cerrada")
                         {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitadoC+"</td><td>"+ item.importeComprobadoC+ "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitadoC + "</td><td>" + item.importeComprobadoC + "</td><td>" + item.importeExcedenteC + "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg' > <i class='fas fa-ban'></i></a >" +
                                 "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
                         }
                         else if (item.estatus == "Capturada") {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>"+ item.importeSolicitadoC+"</td><td>" + item.importeComprobadoC + "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitadoC + "</td><td>" + item.importeComprobadoC + "</td><td>" + item.importeExcedenteC + "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/ModificarEstatus?Folio=" + item.folio + "'><i class='fas fa-paper-plane'></i></a>" + "</td></tr>";
@@ -173,7 +175,7 @@
                         
 
                         else {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>"+ item.importeSolicitado+"</td><td>"+ item.importeComprobadoC + "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitado + "</td><td>" + item.importeComprobadoC + "</td><td>" + item.importeExcedenteC + "</td><td>"  + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/ModificarEstatus?Folio=" + item.folio + "'><i class='fas fa-paper-plane'></i></a>" + "</td></tr>";
